Upgraded to NET 4.8 and Updated RageNativeUI

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ Custom-Pullover/.vs/Custom Pullover/v16/Server/sqlite3/storage.ide
 Custom-Pullover/obj/x64/Debug/Custom Pullover.csprojAssemblyReference.cache
 Custom-Pullover/.vs/Custom Pullover/v16/Server/sqlite3/storage.ide
 Custom-Pullover/.vs/Custom Pullover/v16/.suo
+Custom-Pullover/.vs/Custom Pullover/FileContentIndex/d43e29a8-ec48-45ea-b091-c10919733832.vsidx
+Custom-Pullover/obj/x64/Debug/Custom P.68B61DF6.Up2Date
+Custom-Pullover/packages/Microsoft.CSharp.4.7.0/.signature.p7s
+Custom-Pullover/packages/Microsoft.CSharp.4.7.0/lib/MonoAndroid10/_._
+Custom-Pullover/packages/Microsoft.CSharp.4.7.0/lib/MonoTouch10/_._
+Custom-Pullover/packages/Microsoft.CSharp.4.7.0/lib/net45/_._
